--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,40 @@
 {
-  "name" : "samucab2b/lospdf",
-  "description" : "ZF2 module to wrapper some pdf generation libraries",
-  "require" : {
-    "php" : ">=5.4",
-    "zendframework/zendframework" : ">=2.3.2,<3.0.0"
+  "name": "samucab2b/lospdf",
+  "description": "Fork do módulo LosPdf (ZF2) para geração de PDF — mantido por samucab2b",
+  "require": {
+    "php": ">=5.4",
+    "zendframework/zendframework": ">=2.3.2,<3.0.0"
   },
-  "require-dev" : {
-    "satooshi/php-coveralls" : "dev-master",
-    "phpunit/phpunit" : "~4.4"
+  "require-dev": {
+    "satooshi/php-coveralls": "dev-master",
+    "phpunit/phpunit": "~4.4"
   },
-  "authors" : [ {
-    "name" : "Leandro Silva",
-    "email" : "leandro@leandrosilva.info",
-    "homepage" : "http://leandrosilva.info"
-  } ],
-  "keywords" : [ "los", "pdf", "mpdf", "zf2" ],
-  "autoload" : {
-    "psr-0" : {
-      "LosPdf\\" : "src/"
+  "authors": [
+    {
+      "name": "Samuel Barbosa",
+      "email": "samuelbressan@hotmail.com",
+      "homepage": "https://github.com/samucab2b"
     },
-    "psr-4" : {
-      "LosPdf\\" : "src/"
+    {
+      "name": "Leandro Silva",
+      "email": "leandro@leandrosilva.info",
+      "homepage": "http://leandrosilva.info"
+    }
+  ],
+  "keywords": ["los", "pdf", "mpdf", "zf2"],
+  "autoload": {
+    "psr-0": {
+      "LosPdf\\": "src/"
+    },
+    "psr-4": {
+      "LosPdf\\": "src/"
     }
   },
-  "suggest" : {
-    "los/loslog" : "los/loslog for logging",
-    "los/losui" : "los/losui for twitter bootstrap 3 styling, jquery, chosen and other libraries",
-    "mpdf/mpdf" : "mpdf/mpdf for html to pdf convertion"
+  "suggest": {
+    "los/loslog": "los/loslog for logging",
+    "los/losui": "los/losui for twitter bootstrap 3 styling, jquery, chosen and other libraries",
+    "mpdf/mpdf": "mpdf/mpdf for html to pdf convertion"
   },
-  "type" : "library",
-  "license" : "BSD-3-Clause"
+  "type": "library",
+  "license": "BSD-3-Clause"
 }
